code refactor Ruby stile guide, add some images for descriptions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,18 @@
 
 <body>
 <div class="sidenav">
-  <a href="showMain">Main Page</a>
-  <a href="createUser">Create user with customer</a>
-  <a href="createToken">Create token</a>
-  <a href="createLogin">Create login</a>
-  <a href="refreshLogin">Refresh login</a>
-  <a href="reconnectLogin">Reconnect login</a>
-  <a href="destroyLogin">Destroy login</a>
-  <a href="showLogin">Show login</a>
-  <a href="showAccounts">Show accounts</a>
-  <a href="showPostedTransactions">Show posted transactions</a>
-  <a href="showPendingTransactions">Show pending transactions</a>
-  <a href="showLogs">Show logs</a>
+  <a href="show_main">Main Page</a>
+  <a href="create_user">Create user with customer</a>
+  <a href="create_token">Create token</a>
+  <a href="create_login">Create login</a>
+  <a href="refresh_login">Refresh login</a>
+  <a href="reconnect_login">Reconnect login</a>
+  <a href="destroy_login">Destroy login</a>
+  <a href="show_login">Show login</a>
+  <a href="show_accounts">Show accounts</a>
+  <a href="show_posted_transactions">Show posted transactions</a>
+  <a href="show_pending_transactions">Show pending transactions</a>
+  <a href="show_logs">Show logs</a>
 </div>
 <%= yield %>
 </body>
