--- a/app/views/main/show_main.html.erb
+++ b/app/views/main/show_main.html.erb
@@ -10,13 +10,13 @@
   2) Create login for that customer (use fake_bank_simple_xf provider)<br>
   3) Fetch accounts and transactions(posted and pending) for that login<br>
   4) Refresh/reconnect/destroy login<br>
-  5) Deploy app to heroku and handle Spectre success/fail callbacks.<br>
+  5) Deploy app to heroku and handle Spectre success/fail callbacks. => (https://agile-oasis-26764.herokuapp.com/call_back/handle). Use Show logs to see <br>
 
   2. Upload your code to github.<br><br>
 
   App should display table with created connections(logins)<br>
   Each login should lead to table with its accounts.<br>
-  Each account should lead to table with its transactions.<br>
+  Each account should lead to table with its transactions.<br><br>
 
   Unknown:<br>
   Processing by MainController#showPostedTransactions as HTML<br>
